--- a/index.html
+++ b/index.html
@@ -1,106 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Survey Form</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #F8C8DC;
-            overflow: hidden;
-            font-family: 'Raleway', sans-serif;
-        }
+   <title>Yay</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta charset="UTF-8">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+   <style>
+       body {
+           display: flex;
+           justify-content: center;
+           align-items: center;
+           height: 90vh;
+           background-color: #F8C8DC;
+           overflow: hidden;
+           font-family: 'Raleway', sans-serif;
+       }
 
-        /* Heart Shape */
-        .heart {
-            position: absolute;
-            width: 20px;
-            height: 20px;
-            background-color: #FF6B6B;
-            transform: rotate(45deg);
-            animation: float 4s ease-in-out infinite;
-            opacity: 0.8;
-        }
+       /* Heart Shape */
+       .heart {
+           position: absolute;
+           width: 20px;
+           height: 20px;
+           background-color: #FF6B6B;
+           transform: rotate(45deg);
+           animation: float 4s ease-in-out infinite;
+           opacity: 0.8;
+       }
 
-        .heart::before,
-        .heart::after {
-            content: "";
-            position: absolute;
-            width: 20px;
-            height: 20px;
-            background-color: #FF6B6B;
-            border-radius: 50%;
-        }
+       .heart::before,
+       .heart::after {
+           content: "";
+           position: absolute;
+           width: 20px;
+           height: 20px;
+           background-color: #FF6B6B;
+           border-radius: 50%;
+       }
 
-        .heart::before {
-            top: -10px;
-            left: 0;
-        }
+       .heart::before {
+           top: -10px;
+           left: 0;
+       }
 
-        .heart::after {
-            left: 10px;
-            top: 0;
-        }
+       .heart::after {
+           left: 10px;
+           top: 0;
+       }
 
-        /* Floating animation */
-        @keyframes float {
-            0% {
-                transform: translateY(0) rotate(45deg);
-                opacity: 0.8;
-            }
-            50% {
-                opacity: 1;
-            }
-            100% {
-                transform: translateY(-100vh) rotate(45deg);
-                opacity: 0;
-            }
-        }
+       /* Floating animation */
+       @keyframes float {
+           0% {
+               transform: translateY(0) rotate(45deg);
+               opacity: 0.8;
+           }
+           50% {
+               opacity: 1;
+           }
+           100% {
+               transform: translateY(-100vh) rotate(45deg);
+               opacity: 0;
+           }
+       }
 
-        .container {
-            text-align: center;
-        }
+       /* Button and Text Styling */
+       #noButton {
+           position: absolute;
+           margin-left: 150px;
+           transition: 0.5s;
+       }
 
-        .header_text {
-            font-size: 40px;
-            font-weight: bold;
-            color: white;
-            margin-top: 20px;
-            margin-bottom: 0px;
-        }
+       #yesButton {
+           position: absolute;
+           margin-right: 150px;
+       }
 
-        .gif_container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+       .header_text {
+           font-size: 40px;
+           font-weight: bold;
+           color: white;
+           text-align: center;
+           margin-top: 20px;
+           margin-bottom: 0px;
+       }
 
-        .sage {
-            max-width: 50%;
-            max-height: 100%;
-        }
-    </style>
+       .buttons {
+           display: flex;
+           flex-direction: row;
+           justify-content: center;
+           align-items: center;
+           margin-top: 20px;
+       }
+
+       .btn {
+           background-color: #FFB6C1;
+           color: white;
+           padding: 15px 32px;
+           text-align: center;
+           font-size: 16px;
+           border: none;
+           border-radius: 12px;
+           cursor: pointer;
+       }
+
+       .gif_container {
+           display: flex;
+           justify-content: center;
+           align-items: center;
+       }
+
+   </style>
 </head>
-
 <body>
     <div class="container">
-        <h1 class="header_text">Yayy</h1>
+        <h1 class="header_text">Do you wanna go out with me?</h1>
         <div class="gif_container">
-            <img src="https://media.tenor.com/k2nlhWgMVucAAAAi/cute.gif" class="sage" alt="Cute gif">
+            <img src="https://media.tenor.com/o8I2F7nNvZcAAAAj/meri-billi-billiya.gif" alt="cute gif" class="sage">
         </div>
-        <h1 class="header_text">See You Then</h1>
+        <div class="buttons">
+            <button class="btn" id="yesButton" onclick="nextPage()">Yes</button>
+            <button class="btn" id="noButton" onmouseover="moveButton()">No</button>
+        </div>
     </div>
 
     <script>
-        // Function to create floating hearts
+        function nextPage() {
+            window.location.href = "yay.html";
+        }
+
+        function moveButton() {
+            var x = Math.random() * (window.innerWidth - document.getElementById('noButton').offsetWidth) - 85;
+            var y = Math.random() * (window.innerHeight - document.getElementById('noButton').offsetHeight) - 48;
+            document.getElementById('noButton').style.left = `${x}px`;
+            document.getElementById('noButton').style.top = `${y}px`;
+        }
+
+        // Floating hearts function
         function createHeart() {
             const heart = document.createElement("div");
             heart.classList.add("heart");
